# EnterBoxPlugin

./: .gitignore  CMakeLists-qt5.txt  CMakeLists.txt  Doxyfile  EnterBoxPlugin.pro  README  README.md  create_slink.sh  enterbox.pri  mnas-build.bat  mnasoft.cpp  mnasoft.h
forms/: EnterBox_01.ui  EnterBox_02.ui
src/: EnterBox.cpp  EnterBox.h  EnterBoxPlugin.cpp  EnterBoxPlugin.h  enterbox_lib_global.h
